4. Перенос методов в Stream API [#279131]